src/objects/Trainig__c.object
<CustomObject>
    <fields>
        <fullName>ADVAG__c</fullName>
        <label>ADVAG</label>
        <summarizedField>AdvDev__c.CourseFee_ADVDEV__c</summarizedField>
        <summaryForeignKey>AdvDev__c.trainig_adv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdminStudent__c</fullName>
        <label>AdminStudent</label>
        <summaryForeignKey>Admin__c.Traing_admin__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdvStudents__c</fullName>
        <label>AdvStudents</label>
        <summaryForeignKey>AdvDev__c.trainig_adv__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DevStudent__c</fullName>
        <label>DevStudent</label>
        <summaryForeignKey>Dev__c.Traing_Dev__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev__c</fullName>
        <label>Dev</label>
        <summarizedField>Dev__c.CourseFee_Dev__c</summarizedField>
        <summaryForeignKey>Dev__c.Traing_Dev__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>admin__c</fullName>
        <label>admin</label>
        <summarizedField>Admin__c.CourseFee_admin__c</summarizedField>
        <summaryForeignKey>Admin__c.Traing_admin__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Trainig</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trainig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Traing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>